# wattsorbit

./: .env.production.example  .gitignore  CHANGELOG.md  HANDOFF.md  README.md  RELEASING.md  index.html  latest.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml  update-homebrew.yml  update-manifest.yml  update-tap.yml
distribute/homebrew/: wattsorbit.rb.tmpl
screenshots/report/: index.html
scripts/: gen-manifest.py
src/: App.tsx  Dashboard.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: history.rs  mod.rs  power.rs
src/components/: BatteryBar.tsx  DeviceList.tsx  ErrorBoundary.tsx  NewsBell.tsx  PowerHeader.tsx  UpdateBanner.tsx  UpdaterModal.tsx
src/data/: news-mock.ts
src/hooks/: useUpdateCheck.ts
src/lib/: crash.ts  news.ts  tauri.ts
src/screens/: News.tsx
src/styles/: globals.css
src/types/: index.ts  news.ts
tests/: dashboard.spec.ts  interactions.spec.ts  screenshots.spec.ts  update-flow.spec.ts
tests/native/: dashboard-reopen.mjs
