[package]
name    = "wattsorbit"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri    = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener    = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater   = "2"
tauri-plugin-process   = "2"
serde    = { version = "1", features = ["derive"] }
serde_json = "1"
tokio    = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
anyhow   = "1"
chrono   = { version = "0.4", features = ["serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
